project/stage/semantic_tests/accept/func_return_only.ul
void main() {
    return;
}

int foo1(float bar1) {
    return 0;
}

int foo2(float bar2) {
    return 1;
}
