project/stage/semantic_tests/reject/string_index.ul
void main() {
    int [10] arr;
    arr["0"];
}
